<resources>
    <string name="app_name">ImageHistogram</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_message">Welcome to ImageHistogram! Open the navigation drawer and see the RGB + gray histogram of a photo</string>

    <string name="please_wait">Please wait. Data is being prepared</string>
    <string name="identify">Identify</string>
    <string name="filter">Filter</string>
    <string name="sobel">Sobel Filter</string>
    <string name="prewitt">Prewitt Filter</string>
    <string name="fourier">Fourier Filter</string>

    <string name="convert_to_bw">Convert to BW</string>
    <string name="normalize">Normalize</string>
    <string name="count_object">Count Object</string>

    <string name="object_count">Jumlah Objek:</string>
</resources>
