<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.martinock.imagehistogram.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="20sp"
            android:gravity="center"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="end">
                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                <ImageView
                    android:id="@+id/iv_photo_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                <ImageView
                    android:id="@+id/iv_photo_gray_processed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>


                <ImageView
                    android:id="@+id/iv_photo_gray_smoothed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                <ImageView
                    android:id="@+id/iv_photo_filtered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                <ImageView
                    android:id="@+id/iv_photo_bw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_identify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identify"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone">
            <RadioGroup
                android:id="@+id/filter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sobel"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
                <RadioButton
                    android:id="@+id/option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prewitt"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
                <RadioButton
                    android:id="@+id/option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourier"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
